# Spin

./: .eslintrc.json  .gitignore  .prettierrc  CHANGES.md  CLAUDE.md  README.md  RELEASE_NOTES_v4.1.1.md  RELEASE_v4.2.0.1.md  V5_MADROX_ARCHITECTURE.md  _config.yml  app.js  eslint.config.mjs  fb-prefix-list-gen.md  index.html  install.sh  manifest.json  package-lock.json  package.json  style.css  svelte.config.mjs  sw.js  vite.config.mjs
.github/: PARROT_OS_RUNNERS.md  dependabot.yml
.github/scripts/: validate-parrot-runners.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/src/: main.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/cef/: browser_context.rs  cdp_client.rs  fingerprint_injector.rs  mod.rs
app/src-tauri/src/commands/: browser.rs  cef.rs  hivemind.rs  identity.rs  investigation.rs  mcp.rs  mod.rs  osint.rs  privacy.rs  session.rs
app/src-tauri/src/core/: entity.rs  entity_extractor.rs  fingerprint.rs  identity.rs
app/src-tauri/src/hivemind/: mod.rs
app/src-tauri/src/investigation/: mod.rs
app/src-tauri/src/mcp/: claude_client.rs  mod.rs
app/src-tauri/src/session/: mod.rs
app/src-tauri/src/storage/: mod.rs  sled_store.rs
app/src-tauri/src/ui/: app.rs  messages.rs  mod.rs  state.rs  theme.rs
app/src-tauri/src/ui/views/: browser_view.rs  hivemind.rs  identity.rs  investigation.rs  layout.rs  mcp.rs  mod.rs  nav_bar.rs  osint.rs  privacy.rs  settings.rs  side_panel.rs  tab_bar.rs  title_bar.rs
app/src/store/: index.ts
assets/: icon.icns
docs/: _config.yml  app.js  app.min.js  index.html  manifest.json  style.css  sw.js
madrox-v5/: README.md  index.html  package-lock.json  package.json
madrox-v5/src/: App.tsx  main.tsx
madrox-v5/src-tauri/: Cargo.toml  tauri.conf.json
madrox-v5/src-tauri/src/: lib.rs  main.rs
madrox-v5/src-tauri/src/cef/: fingerprint_injector.rs
madrox-v5/src-tauri/src/commands/: browser.rs  hivemind.rs  identity.rs  investigation.rs  mcp.rs  mod.rs  osint.rs  privacy.rs  session.rs
madrox-v5/src-tauri/src/core/: entity_extractor.rs  fingerprint.rs  identity.rs  mod.rs  privacy_engine.rs
madrox-v5/src-tauri/src/hivemind/: mod.rs
madrox-v5/src-tauri/src/mcp/: claude_client.rs  mod.rs
madrox-v5/src-tauri/src/storage/: mod.rs  sled_store.rs
scripts/: generate-icons.js
src/data/: config.json  osint-bookmarks.js  osint-bookmarks.json  themes.json
src/extensions/: ai-cognitive-tools.js  ai-intel.js  ai-privacy-shield.js  ai-research-assistant.js  ai-research-tools.js  phone-intel.js
src/main/: main.js
src/plugins/: ai-plugin-system.js  hunchly-integration.js  plugin-manager.js  theme-manager.js
src/preload/: devportal-preload.js  preload.js  webview-preload.js
src/renderer/: App.svelte  devportal.html  index.html  investigation.html  main.js  renderer.js  styles.css
tests/: entity-extractor.test.js  phone-intel.test.js  tab-classifier.test.js
(+62 files in other folders)
