[package]
name = "spin"
version = "12.0.3"
description = "Spin v12 Jessica Jones - OSINT Investigation Browser"
authors = ["Spin Team"]
edition = "2021"
license = "MIT"

[lib]
name = "spin_lib"
crate-type = ["lib"]

[dependencies]
# ── GUI (replaces Tauri + NPM frontend entirely) ─────────────────────
iced = { version = "0.13", features = ["tokio", "canvas", "advanced", "image"] }

# ── Browser engine (WebView pane for actual web browsing) ─────────────
wry = "0.44"

# ── Platform paths (replaces tauri::AppHandle::path()) ───────────────
dirs = "5"

# ── Serialisation ─────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async runtime ─────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Utilities ─────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Database ──────────────────────────────────────────────────────────
sled = "0.34"

# ── Entity extraction ─────────────────────────────────────────────────
regex = "1"
lazy_static = "1"

# ── Crypto ────────────────────────────────────────────────────────────
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# ── HTTP client (Claude / MCP API) ───────────────────────────────────
reqwest = { version = "0.12", features = ["json"] }

# ── Hivemind inter-identity messaging ─────────────────────────────────
async-channel = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
