[package]
name = "madrox"
version = "12.0.0"
description = "MADROX Jessica Jones - OSINT Investigation Browser"
authors = ["MADROX Team"]
edition = "2021"
license = "MIT"

[lib]
name = "madrox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sled = "0.34"

# Regex for entity extraction
regex = "1"
lazy_static = "1"

# Crypto
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# HTTP client for MCP/Claude API
reqwest = { version = "0.12", features = ["json"] }

# Async channels for Hivemind sync
async-channel = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
